--- a/src/components/CategoryPage/style.module.css
+++ b/src/components/CategoryPage/style.module.css
@@ -3,9 +3,8 @@
   font-family: "Inter", sans-serif;
 }
 .row {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
   row-gap: 20px;
 }
 .name {
