--- a/src/components/CategoryCard/style.module.css
+++ b/src/components/CategoryCard/style.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  transition: 0.1s ease-in;
 }
 
 .circle {
@@ -28,4 +29,8 @@
 }
 .circle:hover {
   opacity: 0.8;
+}
+
+.card:hover {
+  transform: scale(1.1);
 }
