--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 }
 
 body {
+  background: linear-gradient(180deg, #fff 6.1%, #f7f7f7 68.7%);
   font-family: "Prompt", serif;
   font-weight: 400;
 }
@@ -14,13 +15,18 @@ body {
   padding: 0 10px;
   margin: 0 auto;
 }
-.row {
+/* .row {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 20px;
+  margin: 20px 0;
+} */
+.flex {
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  flex-wrap: wrap;
-  row-gap: 30px;
-  padding: 20px 0;
 }
+
 .main {
   padding: 20px 0;
 }
