--- a/src/components/Spinner/style.module.css
+++ b/src/components/Spinner/style.module.css
@@ -1,3 +1,11 @@
+.wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
+}
 .spinner {
   position: absolute;
   top: 50%;
