--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -1,5 +1,6 @@
 .header {
   border-bottom: 1px solid #ebebeb;
+  box-shadow: 1px 1px 10px black;
   margin-bottom: 20px;
 }
 .row {
@@ -14,7 +15,7 @@
 .logo {
   display: flex;
   align-items: center;
-  font-size: 35px;
+  font-size: 30px;
   user-select: none;
   transition: 0.1s;
   cursor: pointer;
@@ -28,24 +29,24 @@
 }
 .count {
   position: absolute;
-  right: 0;
+  right: -8px;
   top: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 20px;
   height: 20px;
-  background: #1e90ff;
+  background: #ff8a00;
   border-radius: 50%;
   color: #fff;
 }
 .cartImage {
   transition: 0.1s;
-  width: 60px;
+  width: 30px;
 }
 .login {
   transition: 0.1s;
-  width: 50px;
+  width: 35px;
 }
 
 .login:hover {
